# benchmark_json

./: .gitignore  benchmark_json.py  pyproject.toml  settings.py
test_data/: COMPLEX.json  SIMPLE.json
