[tool.poetry]
name = "benchmark_json"
version = "0.1.0"
description = ""
authors = ["r"]

[tool.poetry.dependencies]
python = "^3.9.6"
orjson = "^3.6.3"
simplejson = "^3.17.5"
ujson = "^4.1.0"
python-rapidjson = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
